--- a/Establishments/NoSQL_analysis_starter.ipynb
+++ b/Establishments/NoSQL_analysis_starter.ipynb
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "4eeb227e",
    "metadata": {},
    "outputs": [
@@ -1743,7 +1743,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[{'_id': 'Thanet', 'count': 1130},\n",
+      " {'_id': 'Greenwich', 'count': 882},\n",
+      " {'_id': 'Maidstone', 'count': 713},\n",
+      " {'_id': 'Newham', 'count': 711},\n",
+      " {'_id': 'Swale', 'count': 686},\n",
+      " {'_id': 'Chelmsford', 'count': 680},\n",
+      " {'_id': 'Medway', 'count': 672},\n",
+      " {'_id': 'Bexley', 'count': 607},\n",
+      " {'_id': 'Southend-On-Sea', 'count': 586},\n",
+      " {'_id': 'Tendring', 'count': 542}]\n"
      ]
     }
    ],
@@ -1758,7 +1767,7 @@
     "# Print the number of documents in the result\n",
     "pipeline = [match_query, group_query, sort_query]\n",
     "\n",
-    "results = list(establishments.aggregate(pipeline))\n",
+    "results = list(establishment.aggregate(pipeline))\n",
     "\n",
     "# Print the first 10 results\n",
     "pprint(results[:10])\n"
@@ -1766,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "d8aab364",
    "metadata": {},
    "outputs": [
@@ -1774,7 +1783,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "55\n"
      ]
     },
     {
@@ -1798,20 +1807,80 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Thanet</td>\n",
+       "      <td>1130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Greenwich</td>\n",
+       "      <td>882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Maidstone</td>\n",
+       "      <td>713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Newham</td>\n",
+       "      <td>711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Swale</td>\n",
+       "      <td>686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Chelmsford</td>\n",
+       "      <td>680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Medway</td>\n",
+       "      <td>672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Bexley</td>\n",
+       "      <td>607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Southend-On-Sea</td>\n",
+       "      <td>586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Tendring</td>\n",
+       "      <td>542</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "               _id  count\n",
+       "0           Thanet   1130\n",
+       "1        Greenwich    882\n",
+       "2        Maidstone    713\n",
+       "3           Newham    711\n",
+       "4            Swale    686\n",
+       "5       Chelmsford    680\n",
+       "6           Medway    672\n",
+       "7           Bexley    607\n",
+       "8  Southend-On-Sea    586\n",
+       "9         Tendring    542"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
